# Mastering-ROS-for-Robotics-Programming-Second-Edition

./: README.md
Chapter01and02/mastering_ros_demo_pkg/: CMakeLists.txt  README.md  package.xml  tracks.yaml
Chapter01and02/mastering_ros_demo_pkg/src/: demo_action_client.cpp  demo_action_server.cpp  demo_msg_publisher.cpp  demo_msg_subscriber.cpp  demo_service_client.cpp  demo_service_server.cpp  demo_topic_publisher.cpp  demo_topic_subscriber.cpp
Chapter03/mastering_ros_robot_description_pkg/: README.md
Chapter03/mastering_ros_robot_description_pkg/launch/: view_arm.launch  view_demo.launch  view_mobile_robot.launch  view_pan_tilt_urdf.launch
Chapter03/mastering_ros_robot_description_pkg/urdf/: diff_wheeled_robot.xacro  diff_wheeled_robot_with_laser.xacro  seven_dof_arm.urdf  seven_dof_arm.xacro  seven_dof_arm_with_rgbd.xacro  wheel.urdf.xacro
Chapter04/diff_wheeled_robot_control/: README.md
Chapter04/diff_wheeled_robot_gazebo/: README.md
Chapter04/diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo.launch  diff_wheeled_gazebo_full.launch  diff_wheeled_gazebo_with_laser.launch
Chapter04/seven_dof_arm_gazebo/: README.md
Chapter04/seven_dof_arm_gazebo/launch/: seven_dof_arm_bringup.launch  seven_dof_arm_bringup_grasping.launch  seven_dof_arm_bringup_grasping_gpd.launch  seven_dof_arm_bringup_moveit.launch  seven_dof_arm_with_rgbd_world.launch  seven_dof_arm_world.launch  seven_dof_arm_world_grasping.launch
Chapter04/seven_dof_arm_gazebo/worlds/: grasping.world
Chapter05/vrep_common/: CMakeLists.txt  README.md  mainpage.dox  package.xml
Chapter05/vrep_common/msg/: ForceSensorData.msg  JointSetStateData.msg  ObjectGroupData.msg  ProximitySensorData.msg  ScriptFunctionCallData.msg  VisionSensorData.msg  VisionSensorDepthBuff.msg  VrepInfo.msg
Chapter05/vrep_common/srv/: simRosAddStatusbarMessage.srv  simRosAppendStringSignal.srv  simRosAuxiliaryConsoleClose.srv  simRosAuxiliaryConsoleOpen.srv  simRosAuxiliaryConsolePrint.srv  simRosAuxiliaryConsoleShow.srv  simRosBreakForceSensor.srv  simRosCallScriptFunction.srv  simRosClearFloatSignal.srv  simRosClearIntegerSignal.srv  simRosClearStringSignal.srv  simRosCloseScene.srv  simRosCopyPasteObjects.srv  simRosCreateDummy.srv  simRosDisablePublisher.srv  simRosDisableSubscriber.srv  simRosDisplayDialog.srv  simRosEnablePublisher.srv  simRosEnableSubscriber.srv  simRosEndDialog.srv  simRosEraseFile.srv  simRosGetAndClearStringSignal.srv  simRosGetArrayParameter.srv  simRosGetBooleanParameter.srv  simRosGetCollectionHandle.srv  simRosGetCollisionHandle.srv  simRosGetDialogInput.srv  simRosGetDialogResult.srv  simRosGetDistanceHandle.srv  simRosGetFloatSignal.srv  simRosGetFloatingParameter.srv  simRosGetInfo.srv  simRosGetIntegerParameter.srv  simRosGetIntegerSignal.srv  simRosGetJointMatrix.srv  simRosGetJointState.srv  simRosGetLastErrors.srv  simRosGetModelProperty.srv  simRosGetObjectChild.srv  simRosGetObjectFloatParameter.srv  (+57 more)
Chapter05/vrep_demo_pkg/: CMakeLists.txt  README.md  package.xml
Chapter05/vrep_demo_pkg/scene/: demo_publisher_subscriber.ttt  mobile_robot.ttt  plugin_publisher_subscriber.ttt  seven_dof_arm.ttt
Chapter05/vrep_demo_pkg/src/: start_stop_scene.cpp  start_stop_scene_with_msg.cpp
Chapter05/vrep_demo_pkg/urdf/: seven_dof_arm.urdf  seven_dof_arm.xacro
Chapter05/vrep_plugin/: CMakeLists.txt  README.md  mainpage.dox  package.xml
Chapter05/vrep_plugin/include/: luaFunctionData.h  luaFunctionDataItem.h  v_repConst.h  v_repLib.h  v_repTypes.h
Chapter05/vrep_plugin/include/vrep_plugin/: ROS_server.h  vrepSubscriber.h  vrep_plugin.h
Chapter05/vrep_plugin/src/: ROS_server.cpp  luaFunctionData.cpp  luaFunctionDataItem.cpp  v_repLib.cpp  vrepSubscriber.cpp  vrep_plugin.cpp
Chapter06/seven_dof_arm_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
Chapter06/seven_dof_arm_config/config/: ompl_planning.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
Chapter07/gazebo_basic_world_plugin/: CMakeLists.txt  README.md
Chapter07/nodelet_hello_world/: README.md
Chapter07/plugin_calculator/: README.md
Chapter07/plugin_calculator/src/: calculator_plugins.cpp
Chapter08/my_controller/: CMakeLists.txt  README.md  controller_plugins.xml  my_controller.yaml  package.xml
Chapter08/my_controller/launch/: my_controller.launch  seven_dof_arm_world.launch
Chapter08/my_controller/src/: my_controller.cpp  my_controller.h
Chapter08/my_controller/urdf/: diff_wheeled_robot.xacro  pan_tilt_generated.urdf  seven_dof_arm.xacro  seven_dof_arm_with_rgbd.xacro
Chapter08/my_controller/urdf/sensors/: xtion_pro_live.urdf.xacro
Chapter08/rviz_teleop_commander/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
Chapter08/rviz_teleop_commander/src/: teleop_pad.cpp  teleop_pad.h
Chapter09/ros_wiring_examples/src/: blink.cpp  button.cpp
Chapter10/apriltags_ros_demo/: CMakeLists.txt  README.md  package.xml
Chapter10/cv_bridge_tutorial_pkg/: CMakeLists.txt  README.md
Chapter10/pcl_ros_tutorial/: CMakeLists.txt  README.md  package.xml
Chapter10/pcl_ros_tutorial/src/: pcl_publisher.cpp
Chapter11/chefbot_ros_pkg/: README.md
Chapter12/seven_dof_arm_test/: CMakeLists.txt  README.md
Chapter12/seven_dof_arm_test/launch/: gpd.launch
Chapter12/seven_dof_arm_test/src/: add_collision_object.cpp  attach_detach_object.cpp  pick_place.cpp  pick_place_action.cpp  remove_collision_objct.cpp  test_custom.cpp  test_random.cpp
Chapter13/ros_matlab_test/: README.md  get_laser.m  plot_laser.m  publisher.mdl  publisher_cgxe.mexw64  ros_rate.m  starting_example.mdl  subscriber.mdl  subscriber_cgxe.mexw64  talker.m  turtlebot_orientation_ctrl.mdl  turtlebot_orientation_ctrl_cgxe.mexw64  turtlebot_orientation_ctrl_v2_cgxe.mexw64  vfh_obstacle_avoidance.m
Chapter14/abb_irb6640_moveit_plugins/: CMakeLists.txt  abb_irb6640_manipulator_moveit_ikfast_plugin_description.xml  ikfastdemo.cpp  package.xml  update_ikfast_plugin.sh
Chapter14/ikfast_demo/: abb_irb6640_185_280.srdf  compute  output_ikfast61.cpp
(+200 files in other folders)
